--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         <img src="profileImg.jpg" alt="プロフィール写真" class="profile-photo">
 
         <div class="profile-text">
-            <div class="profile-name">あきお</div>
+            <div class="profile-name">Raito</div>
             <div class="profile-title">システムエンジニア</div>
             <p class="profile-desc">
                 外資系コンサルティングファーム所属<br><br>
