--- a/index.html
+++ b/index.html
@@ -301,9 +301,9 @@
     <h2>Projects</h2>
 
     <div class="project">
-        <h3>鍼灸院様ホームページ</h3>
+        <h3>鍼灸院ホームページ</h3>
         <p>
-            清掃会社様の依頼情報管理システム<br>
+            鍼灸院様のホームページ作成・運用<br>
             開発期間：1か月<br>
             開発費用：6万円<br>
             運用費・管理費：毎月8000円<br>
