--- a/index.html
+++ b/index.html
@@ -15,20 +15,29 @@
             background: linear-gradient(135deg, #f7faff, #eef3ff);
         }
 
-        /* ▼ セクションの左ライン（雑誌レイアウト風） */
-        section {
-            padding: 80px 20px;
+        /* ▼ 全セクションを包むラッパー（縦線を1本だけ描く） */
+        .main-wrapper {
+            position: relative;
             max-width: 1000px;
             margin: 0 auto;
-            border-left: 3px solid #d0d7ff;
             padding-left: 30px;
         }
 
-        section + section {
-            margin-top: -3px;
+        .main-wrapper::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            border-left: 3px solid #d0d7ff;
         }
 
-        /* ▼ おしゃれヘッダー（左寄せに調整） */
+        /* ▼ セクション */
+        section {
+            padding: 80px 20px;
+        }
+
+        /* ▼ おしゃれヘッダー（左寄せ） */
         header {
             position: fixed;
             top: 0;
@@ -38,15 +47,12 @@
             border-bottom: 2px solid #b8c6ff;
             box-shadow: 0 2px 10px rgba(0,0,0,0.05);
             z-index: 1000;
-
-            display: flex;
-            justify-content: flex-start; /* ← 左寄せを確実に */
-        }
-
-        /* ▼ メニューを左寄せ */
-        nav {
             display: flex;
             justify-content: flex-start;
+        }
+
+        nav {
+            display: flex;
             gap: 30px;
             padding: 15px 30px;
         }
@@ -69,7 +75,7 @@
 
         /* Profile Section */
         #profile {
-            margin-top: 50px;
+            padding-top: 120px; /* ← margin ではなく padding に変更 */
             margin-bottom: 40px;
             opacity: 0;
             transform: translateY(30px);
@@ -138,9 +144,9 @@
         .flow-item {
             width: 80%;
             padding: 20px;
-            background: #f5f7ff;
+            background: #ffffff; /* ← 白に変更 */
             border-radius: 10px;
-            border: 1px solid #d0d7ff;
+            border: 1px solid #c5ccff;
             opacity: 0;
             filter: brightness(0.4);
             transform: translateY(40px) scale(0.95);
@@ -177,7 +183,6 @@
             text-align: center;
             font-weight: bold;
             box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-            transition: none;
         }
 
         /* Projects */
@@ -196,31 +201,35 @@
             box-shadow: 0 8px 20px rgba(0,0,0,0.12);
         }
 
-        /* Contact */
-        form {
+        /* Contact（おしゃれ版） */
+        .contact-box {
+            background: #ffffff;
+            padding: 30px;
+            border-radius: 12px;
+            border-left: 4px solid #b8c6ff;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.08);
+            max-width: 600px;
+        }
+
+        .contact-icon {
+            width: 50px;
+            height: 50px;
+            background: #e8edff;
+            border-radius: 50%;
             display: flex;
-            flex-direction: column;
-            gap: 15px;
+            align-items: center;
+            justify-content: center;
+            font-size: 26px;
+            color: #4a5cff;
+            margin-bottom: 15px;
         }
 
-        input, textarea {
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 6px;
-            font-size: 16px;
+        .contact-mail {
+            font-size: 20px;
+            font-weight: bold;
+            color: #0078ff;
+            margin-top: 10px;
         }
-
-        button {
-            padding: 12px;
-            background: #0078ff;
-            color: #fff;
-            border: none;
-            border-radius: 6px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-
-        button:hover { background: #005fcc; }
 
         html { scroll-behavior: smooth; }
     </style>
@@ -238,139 +247,133 @@
     </nav>
 </header>
 
-<section id="profile">
-    <h2>Profile</h2>
+<div class="main-wrapper">
 
-    <div class="profile-wrapper">
-        <img src="profileImg.jpg" alt="プロフィール写真" class="profile-photo">
+    <section id="profile">
+        <h2>Profile</h2>
 
-        <div class="profile-text">
-            <div class="profile-name">Raito</div>
-            <div class="profile-title">システムエンジニア</div>
-            <p class="profile-desc">
-                外資系コンサルティングファーム所属<br><br>
-                ↓お気軽にご相談ください<br>
-                ・システムを開発して業務を効率化したい！<br>
-                ・お店のホームページを作成したい！<br>
-                ・システム開発のお手伝いをしてほしい<br>
-                ・就職活動やキャリアで悩んでいる<br>
-                etc...
-            </p>
+        <div class="profile-wrapper">
+            <img src="profileImg.jpg" alt="プロフィール写真" class="profile-photo">
+
+            <div class="profile-text">
+                <div class="profile-name">Raito</div>
+                <div class="profile-title">システムエンジニア</div>
+                <p class="profile-desc">
+                    外資系コンサルティングファーム所属<br><br>
+                    ↓お気軽にご相談ください<br>
+                    ・システムを開発して業務を効率化したい！<br>
+                    ・お店のホームページを作成したい！<br>
+                    ・システム開発のお手伝いをしてほしい<br>
+                    ・就職活動やキャリアで悩んでいる<br>
+                    etc...
+                </p>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<section id="about">
-    <h2>About Me</h2>
+    <section id="about">
+        <h2>About Me</h2>
 
-    <div class="vertical-flow">
+        <div class="vertical-flow">
 
-        <div class="flow-item">
-            <h3>2019～2023</h3>
+            <div class="flow-item">
+                <h3>2019～2023</h3>
+                <p>
+                    東京理科大学・理学部<br>
+                    &nbsp;&nbsp;数学/情報専攻<br>
+                    &nbsp;&nbsp;アルゴリズムの研究室に所属
+                </p>
+            </div>
+
+            <div class="flow-line"></div>
+
+            <div class="flow-item">
+                <h3>2023～2025</h3>
+                <p>
+                    自社開発企業<br>
+                    &nbsp;&nbsp;設計事務所のWebシステム新規開発～リリース・追加改修を経験
+                </p>
+            </div>
+
+            <div class="flow-line"></div>
+
+            <div class="flow-item">
+                <h3>2025～</h3>
+                <p>
+                    外資系コンサルティングファーム<br>
+                    &nbsp;&nbsp;金融機関Webシステムの設計・案件マネジメントを担当
+                </p>
+            </div>
+
+        </div>
+    </section>
+
+    <section id="projects">
+        <h2>Projects</h2>
+
+        <div class="project">
+            <h3>鍼灸院ホームページ</h3>
             <p>
-                東京理科大学・理学部<br>
-                &nbsp;&nbsp;数学/情報専攻<br>
-                &nbsp;&nbsp;アルゴリズムの研究室に所属
+                鍼灸院様のホームページ作成・運用<br>
+                開発期間：1か月<br>
+                開発費用：6万円<br>
+                運用費・管理費：毎月8000円<br>
+                <a href="鍼灸院.png" target="_blank">本システムのサンプル画像はこちら</a>
             </p>
         </div>
 
-        <div class="flow-line"></div>
-
-        <div class="flow-item">
-            <h3>2023～2025</h3>
+        <div class="project">
+            <h3>物件管理システム</h3>
             <p>
-                自社開発企業<br>
-                &nbsp;&nbsp;設計事務所のWebシステム新規開発～リリース・追加改修を経験
+                清掃会社様の依頼情報管理システム刷新<br>
+                開発期間：4か月<br>
+                開発費用：90万円<br>
+                運用費：毎月5万円前後<br>
+                管理費：毎月2万円<br>
+                <a href="物件管理.png" target="_blank">本システムのサンプル画像はこちら</a>
             </p>
         </div>
 
-        <div class="flow-line"></div>
+    </section>
 
-        <div class="flow-item">
-            <h3>2025～</h3>
-            <p>
-                外資系コンサルティングファーム<br>
-                &nbsp;&nbsp;金融機関Webシステムの設計・案件マネジメントを担当
-            </p>
+    <section id="skills">
+        <h2>Skills</h2>
+
+        <h3>Languages</h3>
+        <div class="skills-list">
+            <div class="skill-item">Java</div>
+            <div class="skill-item">JavaScript</div>
+            <div class="skill-item">HTML</div>
+            <div class="skill-item">CSS</div>
+            <div class="skill-item">OracleSQL</div>
         </div>
 
-    </div>
-</section>
+        <h3>Frameworks / Libraries</h3>
+        <div class="skills-list">
+            <div class="skill-item">Spring Boot</div>
+            <div class="skill-item">Laravel</div>
+        </div>
 
-<section id="projects">
-    <h2>Projects</h2>
+        <h3>Cloud / Tools</h3>
+        <div class="skills-list">
+            <div class="skill-item">AWS</div>
+            <div class="skill-item">Git</div>
+            <div class="skill-item">Linux</div>
+        </div>
+    </section>
 
-    <div class="project">
-        <h3>鍼灸院ホームページ</h3>
-        <p>
-            鍼灸院様のホームページ作成・運用<br>
-            開発期間：1か月<br>
-            開発費用：6万円<br>
-            運用費・管理費：毎月8000円<br>
-            <a href="鍼灸院.png" target="_blank">本システムのサンプル画像はこちら（背景画像をフリー素材に差し替えています）</a>
-        </p>
-    </div>
+    <section id="contact">
+        <h2>Contact</h2>
 
-    <div class="project">
-        <h3>物件管理システム</h3>
-        <p>
-            清掃会社様の依頼情報管理システム刷新<br>
-            開発期間：4か月<br>
-            開発費用：90万円<br>
-            運用費：毎月5万円前後（毎日数千件の画像をアップロード・管理するためサーバーの費用）<br>
-            管理費：毎月2万円（小規模修正・サーバーダウン時対応など）<br>
-            <a href="物件管理.png" target="_blank">本システムのサンプル画像はこちら</a>
-        </p>
-    </div>
-<!--
-    <div class="project">
-        <h3>金融系システム開発</h3>
-        <p>Java/Spring Bootを用いた大規模システム開発に従事。</p>
-    </div>
--->
-</section>
+        <div class="contact-box">
+            <div class="contact-icon">✉</div>
+            <p>お問い合わせは下記のメールアドレスまで</p>
+            <div class="contact-mail">askbussac@outlook.jp</div>
+        </div>
 
-<section id="skills">
-    <h2>Skills</h2>
+    </section>
 
-    <h3>Languages</h3>
-    <div class="skills-list">
-        <div class="skill-item">Java</div>
-        <div class="skill-item">JavaScript</div>
-        <div class="skill-item">HTML</div>
-        <div class="skill-item">CSS</div>
-        <div class="skill-item">OracleSQL</div>
-    </div>
-
-    <h3>Frameworks / Libraries</h3>
-    <div class="skills-list">
-        <div class="skill-item">Spring Boot</div>
-        <div class="skill-item">Laravel</div>
-    </div>
-
-    <h3>Cloud / Tools</h3>
-    <div class="skills-list">
-        <div class="skill-item">AWS</div>
-        <div class="skill-item">Git</div>
-        <div class="skill-item">Linux</div>
-    </div>
-</section>
-
-<section id="contact">
-    <h2>Contact</h2>
-    <p>
-        お問い合わせは下記のメールアドレスまで<br><br>
-        askbussac@outlook.jp
-    </p>
-    <!--
-    <form>
-        <input type="text" placeholder="お名前">
-        <input type="email" placeholder="メールアドレス">
-        <textarea rows="5" placeholder="お問い合わせ内容"></textarea>
-        <button type="submit">送信</button>
-    </form>
--->
-</section>
+</div><!-- /.main-wrapper -->
 
 <script>
     window.history.scrollRestoration = "manual";
