--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- 🔍 SEO 基本設定 -->
-    <title>Akio（Raito） | Webエンジニア ポートフォリオ</title>
-    <meta name="description" content="Webシステム開発・UI/UX改善・Spring Boot・AWSを中心に活動するエンジニアのポートフォリオ。設計から開発、運用まで一貫して対応します。">
+    <title>Raito | Webエンジニア ポートフォリオ</title>
+    <meta name="description" content="Webシステム開発・ホームページ作成・Spring Boot・AWSを中心に活動するエンジニアのポートフォリオ。設計から開発、運用まで一貫して対応します。">
 
     <!-- 🔗 Canonical（重複URL対策） -->
     <link rel="canonical" href="https://engineerportfolio.work/">
 
     <!-- 📱 OGP（SNSシェア最適化） -->
-    <meta property="og:title" content="Akio（Raito） | Webエンジニア ポートフォリオ">
+    <meta property="og:title" content="Raito | Webエンジニア ポートフォリオ">
     <meta property="og:description" content="Webシステム開発・UI/UX改善・Spring Boot・AWSを中心に活動するエンジニアのポートフォリオ。">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://engineerportfolio.work/">
@@ -26,7 +26,7 @@
     {
       "@context": "https://schema.org",
       "@type": "Person",
-      "name": "Akio（Raito）",
+      "name": "Raito",
       "jobTitle": "Webエンジニア",
       "url": "https://engineerportfolio.work",
       "sameAs": [
@@ -279,7 +279,7 @@
 
 <body>
 
-<h1 class="visually-hidden">Akio（Raito） | Webエンジニア ポートフォリオ</h1>
+<h1 class="visually-hidden">Raito | Webエンジニア ポートフォリオ</h1>
 
 <header>
     <nav>
