--- a/index.html
+++ b/index.html
@@ -138,15 +138,14 @@
             nav {
                 position: absolute;
                 top: 60px;
-                right: 0;
-                width: 70%;
+                left: 0;        /* ← 左寄せ */
+                width: 100%;    /* ← 全幅 */
                 background: #fff;
                 flex-direction: column;
                 gap: 0;
                 display: none;
                 border-bottom: 2px solid #b8c6ff;
-                border-left: 1px solid #eee;
-                box-shadow: -2px 4px 10px rgba(0,0,0,0.1);
+                box-shadow: 0 4px 10px rgba(0,0,0,0.1);
             }
 
             nav.show {
