--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                 鍼灸院様のホームページ作成・運用<br>
                 開発期間：1か月<br>
                 開発費用：6万円<br>
-                運用費・管理費：毎月8000円<br>
+                運用費・管理費：毎月8000円（ドメイン・サーバーなどの管理費を含む）<br>
             </p>
             <a href="鍼灸院.png" target="_blank">
                 <img src="鍼灸院.png" alt="鍼灸院ホームページのサンプル画像" style="width:100%; border-radius:8px;">
@@ -418,7 +418,7 @@
                 清掃会社様の依頼情報管理システム刷新<br>
                 開発期間：4か月<br>
                 開発費用：90万円<br>
-                運用費：毎月5万円前後<br>
+                運用費：毎月5万円前後（１日あたり数千件の画像を保存・管理するためのサーバー費用など）<br>
                 管理費：毎月2万円<br>
             </p>
             <a href="物件管理.png" target="_blank">
